--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,9 +31,10 @@
 
     <FrameLayout
         android:id="@+id/buttonsLayout"
-        android:layout_width="410dp"
-        android:layout_height="146dp"
-        android:layout_marginTop="235dp"
+        android:layout_width="0dp"
+        android:layout_height="204dp"
+        android:layout_marginTop="180dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
