--- a/app/src/main/res/layout/option_sliders.xml
+++ b/app/src/main/res/layout/option_sliders.xml
@@ -3,6 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:onClick="onClickSettings"
+        android:text="@string/Back" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -10,12 +17,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="match_parent"
-                android:layout_height="63dp"
+                android:layout_height="50dp"
                 android:gravity="center"
                 android:text="TextView"
                 android:textSize="18sp"
@@ -29,7 +36,7 @@
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
-                android:layout_height="63dp"
+                android:layout_height="50dp"
                 android:gravity="center"
                 android:text="TextView"
                 android:textSize="18sp"
@@ -43,7 +50,7 @@
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
-                android:layout_height="63dp"
+                android:layout_height="50dp"
                 android:gravity="center"
                 android:text="TextView"
                 android:textSize="18sp"
@@ -53,6 +60,7 @@
                 android:id="@+id/seekBar3"
                 android:layout_width="match_parent"
                 android:layout_height="56dp" />
+
         </LinearLayout>
     </ScrollView>
 
